<resources>
    <string name="app_name">IPTV Lite</string>
    <string name="images">Images</string>
    <string name="disclaimer">Disclaimer</string>
    <string name="dummy_text_long">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer vitae purus aliquet, euismod erat sed, iaculis sapien. Donec tincidunt elit vel ullamcorper ultrices. Maecenas elit lacus, commodo id odio vel, egestas porta magna. Etiam ipsum nisl, varius in dolor sit amet, tempus efficitur tortor. In hac habitasse platea dictumst. Donec sit amet odio ut ex sagittis semper. Quisque rhoncus velit in pulvinar ultrices. Duis et diam ante. Sed dolor augue, placerat et facilisis eu, fermentum vitae metus. Proin laoreet lorem vel erat ultrices, ac rhoncus dolor malesuada. Vivamus ex diam, accumsan sed fermentum ac, tincidunt a purus. Cras elementum enim congue, scelerisque nisl nec, ultrices nulla. Maecenas laoreet suscipit urna, lacinia gravida justo tincidunt vel. Maecenas tempor, felis ac eleifend tincidunt, lectus mi ultrices neque, ut aliquet nisi diam id urna. Nullam ultricies ut nulla tristique rutrum. Pellentesque vel nulla et massa facilisis tincidunt ac eu erat. Quisque vehicula elementum eros, in pulvinar massa sollicitudin sit amet. Suspendisse at malesuada dui. Proin feugiat sit amet velit a elementum.</string>
    <string name="dummy_text_medium">Lorem ipsum dolor sit amet, consecteipsum nisl, var odio ut ex sagittis semper. Quisque rhoncus velit in pulvinar ultrices. Duis et diam ante. Sed dolor augue, placerat et facilisis eu, fermentum vitae metus. Proin laorea.</string>
    <string name="agree_and_continue">Agree and Continue</string>
    <string name="choose_login_type">Choose login type</string>
    <string name="login_with_xtream_code">Login With Xtream Code</string>
    <string name="load_your_m3u_playlist">Load Your M3U Playlist</string>
    <string name="login">Login</string>
    <string name="enter_url">Enter URL</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="add">Add</string>
    <string name="playlist_name">Playlist Name</string>
    <string name="add_user">Add User</string>
    <string name="user">User</string>
    <string name="category_name">Category Name</string>
    <string name="please_wait">Please Wait...</string>
    <string name="while_we_are_getting_things_ready_for_the_first_time_downloading_channels_movies_and_series">While we are getting things ready for the first time Downloading Channels, Movies and Series</string>
    <string name="refresh">REFRESH</string>
    <string name="live_with_epg">Live With EPG</string>
    <string name="delete">Delete</string>
    <string name="dummy_text_provider"><b>*Note:-</b> Lorem ipsum dolor sit amet, consecteipsum nisl, var odio ut ex sagittis semper. Quisque rhoncus velit in pulvinar ultrices. Duis et diam ante. Sed dolor augue, placerat et facilisis eu, fermentum vitae metus. Proin laorea.</string>
    <string name="settings">Settings</string>
    <string name="recordings">Recordings</string>
    <string name="catch_up">Catch up</string>
    <string name="catch_up_live">Catch up Live</string>
    <string name="aso_provider_status">ELITE Provider Status</string>
    <string name="list_user">List User</string>
    <string name="epg_categories">EPG Categories</string>
    <string name="search">Search</string>
    <string name="search_by_categories">Search by Categories</string>
    <string name="search_epg_categories">Search EPG Categories …</string>
    <string name="search_catch_up">Search Catch up …</string>
    <string name="live_tv">Live TV</string>
    <string name="search_series_channels_etc">Search series, channels etc …</string>
    <string name="search_movies_channels_etc">Search by Categories</string>
    <string name="search_live_channels_etc">Search by Category or Channel name</string>
    <string name="movie">Movie</string>
    <string name="my_playlist">My Playlist</string>
    <string name="logout">Logout</string>
    <string name="account_status">Account Status</string>
    <string name="movies">Movies</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="_24_hours">24 Hours</string>
    <string name="_12_hours">12 Hours</string>
    <string name="set_parental_password">Set Parental Password</string>
    <string name="set_automation">Set Automation</string>
    <string name="refresh_select_playlist">Refresh Select Playlist</string>
    <string name="play_select_playlist">Play Select Playlist</string>
    <string name="delete_selected_playlist">Delete Selected Playlist</string>
    <string name="add_new_play_list">Add New Playlist</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="all">All</string>
    <string name="watch_trailer">Watch Trailer</string>
    <string name="watch_movie">WATCH MOVIE</string>
    <string name="add_to_favourite">ADD TO FAVOURITE</string>
    <string name="remove_from_favourite">REMOVE FROM FAVOURITE</string>
    <string name="display">Display</string>
    <string name="subtitle">Subtitle</string>
    <string name="add_to_favorite">Add to Favorite</string>
    <string name="start_recording">Start Recording</string>
    <string name="play">Play</string>
    <string name="close">Close</string>
    <string name="auto_update_epg">Auto-Update EPG</string>
    <string name="auto_update_channels_amp_movies_daily"><![CDATA[Auto-Update Channels & Movies Daily]]></string>
    <string name="upload_file">Upload File</string>
    <string name="select_time_format">Select Time Format</string>
    <string name="enter_your_password">Enter your Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="name">Name</string>
    <string name="url">URL</string>
    <string name="parental_control">Parental Control</string>
    <string name="automation">Automation</string>
    <string name="time_format">Time Format</string>
    <string name="are_you_sure_you_want_to_delete_playlist_1">Are you sure you want to delete selected playlist?</string>
    <string name="delete_select_playlist">Delete Select Playlist</string>
    <string name="refresh_selected_playlist">Refresh Selected Playlist</string>
    <string name="are_you_sure_you_want_to_refresh_playlist_1">Are you sure you want to refresh selected playlist?</string>
    <string name="are_you_sure_you_want_to_logout">Are you sure you want to logout?</string>
    <string name="select_language">Select Language</string>
    <string name="series">Series</string>
    <string name="series_info">Series Info</string>
    <string name="text_internal_storage">Internal Storage</string>
    <string name="text_choose_m3u_file">Choose M3U File</string>
    <string name="m3u_playlist">M3U Playlist</string>
    <string name="text_enter_login_detail">Enter Your Login Details</string>
    <string name="text_back">Back</string>
    <string name="text_cancel">Cancel</string>
    <string name="no_internet">No internet connection</string>
    <string name="disclaimer_text">- ELITE PLAYER doesn\'t provide any kind of media content.\n- Users need to add a playlist from your IPTV provider to be able to watch it.\n- ELITE PLAYER has no affiliation with any media content suppliers or providers.\n- We do not endorse the streaming of copyright-protected material without the permission of the copyright holder.</string>
    <string name="duration">Duration:</string>
    <string name="directed_by">Directed By:</string>
    <string name="cast">Cast:</string>
    <string name="error_player">Error initializing the YouTube Player: %1$s</string>
    <string name="watch_now">Watch Now</string>
    <string name="no_data_found">No EPG Found !</string>
    <string name="name_account">Name</string>
    <string name="provider">Provider</string>
    <string name="user_name">User Name</string>
    <string name="playlist_status">Playlist Status</string>
    <string name="expire_date">Expire Date</string>
    <string name="is_trail">Is Trail</string>
    <string name="active_connections">Active connections</string>
    <string name="created_on_date">Created on date</string>
    <string name="enter_parental_password">Enter Parental Password</string>
    <string name="submit">Submit</string>
    <string name="add_new_playlist">Add New Playlist</string>
    <string name="update_selected_playlist">Update Selected Playlist</string>
    <string name="update">Update</string>
    <string name="error_unable_to_add_user">Unable to add user. Please make sure your M3U file is correct.</string>
    <string name="no_arrangement_found">No Arrangement Found</string>
    <string name="explore_all">Explore All</string>
    <string name="add_epg">ADD EPG</string>
    <string name="dashed_line">-----</string>
    <string name="active">Active</string>
    <string name="no_catch_up_found">No Catch Up Found!</string>
    <string name="no_live_tv_found">No Live TV Found!</string>
    <string name="no_series_found">No Series Found!</string>
    <string name="no_movies_found">No Movies Found!</string>
    <string name="no_m3u_playlist_found">No M3U Playlist Found!</string>
    <string name="movie_info">Movie Info</string>
    <string name="multiscreen">Multiscreen</string>
    <string name="multi_screen_grid">Multi-Screen Grid</string>
    <string name="choose_grid">Choose Grid</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="no_epg_found">No EPG Found!</string>
    <string name="file">File</string>
    <string name="m3u8_url">M3U8 Url</string>
    <string name="url_">URL</string>
    <string name="enter_file_url">Enter File Url</string>
    <string name="choose_playlist_type">Choose Playlist Type</string>
    <string name="stream_login">1-Stream Login</string>
    <string name="by_using_this_application_you_agreee_to_the">By using this application, you agreee to the</string>
    <string name="terms_of_services">Terms of Services.</string>
    <string name="m3u_login">M3U Login</string>
    <string name="local_audio_video_data">Local Audio/Video Data</string>
    <string name="single_stream">Single Stream</string>
    <string name="xtreme_playlist">Xtreme Playlist</string>
    <string name="join_us_and_explore_thousands_of_great_opportunities">Join us and Explore thousands of Great \n Opportunities</string>
    <string name="enter_login_details">Enter Login Details</string>
    <string name="notifications">notifications</string>
    <string name="profile">profile</string>
    <string name="swap_user">swap user</string>
    <string name="general_settings">General Settings</string>
    <string name="epg">EPG</string>
    <string name="player_selection">Player Selection</string>
    <string name="player_settings">Player Settings</string>
    <string name="backup_and_restore">Backup and Restore</string>
    <string name="to_restore_backup_from">To restore backup from cloud, you need to login same account you used to backup your settings. Otherwise restore operation will be failed. Auto sync is not available. If you have performed Cloud backup from another device. It will overwrite your current backup. Restore from cloud, make necessary changes and then run cloud backup to update your backup from new devices.</string>
    <string name="backup_now">Backup Now</string>
    <string name="restore_from_cloud">Restore from Cloud</string>
    <string name="api_server">API Server</string>
    <string name="default_server">Default Server</string>
    <string name="about">About</string>
    <string name="stream_format">Stream Format</string>
    <string name="disable_pin_code">Disable Pin Code</string>
    <string name="change_pin_code">Change Pin Code</string>
    <string name="setup_your_pin_code">Setup Your Pin Code</string>
    <string name="episodes">Episodes</string>
    <string name="rating">rating</string>
    <string name="_1h_30m">1h:30m</string>
</resources>