<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.dhiman.iptv.activity.my_play_list.MyPlayListViewModel" />

    </data>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="@dimen/_10sdp"
            android:paddingTop="@dimen/_10sdp"
            android:paddingEnd="@dimen/_10sdp"
            android:paddingBottom="@dimen/_10sdp">

            <com.google.android.material.textfield.TextInputLayout
                style="@style/TextInputLayoutStyle"
                android:layout_marginTop="0dp">

                <com.dhiman.iptv.util.custom_view.HelveticaMediumTextInputEditTextView
                    android:id="@+id/nameEditText"
                    style="@style/EditTextInputLayoutStyle"
                    android:focusedByDefault="true"
                    android:gravity="start"
                    android:hint="@string/name"
                    tools:ignore="UnusedAttribute" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout style="@style/TextInputLayoutStyle">

                <com.dhiman.iptv.util.custom_view.HelveticaMediumTextInputEditTextView
                    android:id="@+id/usernameEditText"
                    style="@style/EditTextInputLayoutStyle"
                    android:gravity="start"
                    android:hint="@string/username" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout style="@style/TextInputLayoutStyle">

                <com.dhiman.iptv.util.custom_view.HelveticaMediumTextInputEditTextView
                    android:id="@+id/passwordEditText"
                    style="@style/EditTextInputLayoutStyle"
                    android:gravity="start"
                    android:hint="@string/password" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout style="@style/TextInputLayoutStyle">

                <com.dhiman.iptv.util.custom_view.HelveticaMediumTextInputEditTextView
                    android:id="@+id/urlEditText"
                    style="@style/EditTextInputLayoutStyle"
                    android:gravity="start"
                    android:hint="@string/url" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.dhiman.iptv.util.custom_view.HelveticaRegularButton
                android:id="@+id/btnAdd"
                style="@style/AppButtonStyleMahogany"
                android:layout_marginTop="@dimen/_10sdp"
                android:text="@string/add"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.core.widget.NestedScrollView>

</layout>