<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="MissingDefaultResource">

    <TextView
            android:id="@+id/text_view_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:padding="@dimen/_10sdp"
            android:text="@string/text_choose_m3u_file"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="@dimen/_18ssp"/>

    <TextView
            android:id="@+id/text_view_file_path"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_below="@+id/text_view_title"
            android:text="@string/text_choose_m3u_file"
            android:textColor="@color/black"
            android:textSize="@dimen/_14ssp"/>

    <ListView
            android:id="@+id/list_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/text_view_file_path"
            android:layout_above="@+id/relative_layout_bottom"
            android:layout_marginTop="@dimen/_10sdp"/>

    <RelativeLayout
            android:id="@+id/relative_layout_bottom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="1"
            android:orientation="horizontal"
            android:paddingStart="@dimen/_10sdp"
            android:paddingEnd="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_10ssp"
            android:layout_alignParentBottom="true">

        <Button
                android:id="@+id/button_back"
                android:layout_width="@dimen/_120sdp"
                android:layout_height="@dimen/_35sdp"
                android:layout_alignParentStart="true"
                android:visibility="gone"
                android:text="@string/text_back"
                android:textColor="@color/white"
                android:textSize="@dimen/_16sdp"/>

        <Button
            android:id="@+id/button_cancel"
            android:layout_width="@dimen/_120sdp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:text="@string/text_cancel"
            style="@style/AppButtonStyleMahogany"
            android:textColor="@color/white" />

    </RelativeLayout>

</RelativeLayout>