<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="@dimen/_130sdp"
        android:layout_height="wrap_content"
        android:padding="@dimen/_3sdp">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/episodeThumbnailIv"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_70sdp"
            android:contentDescription="@string/episodes"
            android:scaleType="centerCrop"
            android:src="@drawable/avengers"
            app:layout_constraintTop_toTopOf="parent"
            app:selector_background="@{@drawable/movie_item_selector}"
            app:shapeAppearanceOverlay="@style/RoundedImage" />



        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@id/episodeThumbnailIv"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/episodeThumbnailIv"
            android:src="@drawable/ic_play" />


        <TextView
            android:id="@+id/movieNameTv"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginStart="@dimen/_5sdp"
            android:text="@string/_1h_30m"
            android:gravity="center"
            android:paddingHorizontal="@dimen/_2sdp"
            app:layout_constraintStart_toStartOf="parent"
            android:visibility="visible"
            android:background="@drawable/bg_purple"
            android:textColor="@color/white"
            app:layout_constraintTop_toTopOf="@id/episodeThumbnailIv" />



        <TextView
            android:id="@+id/episodeNameTv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@id/ratingLt"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/episodeThumbnailIv" />

        <LinearLayout
            android:id="@+id/ratingLt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/episodeThumbnailIv">

            <ImageView
                android:layout_width="@dimen/_5sdp"
                android:layout_height="@dimen/_5sdp"
                android:contentDescription="@string/rating"
                android:src="@drawable/star" />

            <ImageView
                android:layout_width="@dimen/_5sdp"
                android:layout_height="@dimen/_5sdp"
                android:contentDescription="@string/rating"
                android:src="@drawable/star" />

            <ImageView
                android:layout_width="@dimen/_5sdp"
                android:layout_height="@dimen/_5sdp"
                android:contentDescription="@string/rating"
                android:src="@drawable/star" />

            <ImageView
                android:layout_width="@dimen/_5sdp"
                android:layout_height="@dimen/_5sdp"
                android:contentDescription="@string/rating"
                android:src="@drawable/star" />

            <ImageView
                android:layout_width="@dimen/_5sdp"
                android:layout_height="@dimen/_5sdp"
                android:contentDescription="@string/rating"
                android:src="@drawable/star" />

        </LinearLayout>

        <TextView
            android:id="@+id/episodeDescriptionTv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            android:ellipsize="end"
            android:maxLines="2"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="@dimen/_7ssp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/episodeNameTv" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>